--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <p class="profile__job">Исследователь океана</p>
                     </div>
                 </div>
-                <img src="images/svg/add-button-svg.svg" alt="add button" class="profile__add-button">
+                <button class="profile__add-button"></button>
             </section>
             <section class="elements">
                 <div class="element">
@@ -74,14 +74,14 @@
             </section>
 
         </main>
+        <script src="scripts/script.js"></script>
         <div class="popup">
             <div class="popup__container">
-                
+             
             </div>
         </div>
         <footer class="footer">
-            <p class="footer__text">&COPY; 2020 Mesto Russia</p>
-
+            <p class="footer__text">&COPY; 2021 Mesto Russia</p>
         </footer>
     </div>
 </body>
