--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
         <script src="scripts/script.js"></script>
         <div class="popup">
             <div class="popup__container">
+            <button class="popup__close-button"></button>
              
             </div>
         </div>
