--- a/index.html
+++ b/index.html
@@ -78,6 +78,13 @@
         <div class="popup">
             <div class="popup__container">
             <button class="popup__close-button"></button>
+            <form action="" class="popup__form">
+                <h2 class="popup__form-header">Редактировать профиль</h2>
+                <input class="" type="text" name ="name" required>
+                <input class="popup__form-input-text" type="text" name ="job" required>
+                <input class="popup__form-submit" type="submit" value="Сохранить">
+
+            </form>
              
             </div>
         </div>
