--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     </div>
                 </div>
                 <div class="element">
-                    <img src="images/karachaevo-chekessiya.jpg" alt="Карачаево-Ч..." class="element__image">
+                    <img src="images/karachaevo-chekessiya.jpg" alt="Карачаево-Черкессия" class="element__image">
                     <div class="element__text">
                         <p class="element__name">Карачаево-Черкессия</p>
                         <button class="element__like"></button>
@@ -80,8 +80,8 @@
             <button class="popup__close-button"></button>
             <form action="" class="popup__form">
                 <h2 class="popup__form-header">Редактировать профиль</h2>
-                <input class="" type="text" name ="name" required>
-                <input class="popup__form-input-text" type="text" name ="job" required>
+                <input class="popup__form-input-text" type="text" name ="name" placeholder="Жак-Ив Кусто" required>
+                <input class="popup__form-input-text" type="text" name ="job" placeholder="Исследователь океана" required>
                 <input class="popup__form-submit" type="submit" value="Сохранить">
 
             </form>
