--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
             <button class="popup__close-button"></button>
             <form action="" class="popup__form">
                 <h2 class="popup__form-header">Редактировать профиль</h2>
-                <input class="popup__form-input-text" type="text" name ="name" placeholder="Жак-Ив Кусто" required>
-                <input class="popup__form-input-text" type="text" name ="job" placeholder="Исследователь океана" required>
+                <input class="popup__form-input-text" type="text" name ="name" value="Жак-Ив Кусто" required>
+                <input class="popup__form-input-text" type="text" name ="job" value="Исследователь океана" required>
                 <input class="popup__form-submit" type="submit" value="Сохранить">
 
             </form>
