--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
@@ -81,9 +81,7 @@
                     <input class="popup__form-input-name" type="text" name="name" value="Жак-Ив Кусто" required>
                     <input class="popup__form-input-job" type="text" name="job" value="Исследователь океана" required>
                     <input class="popup__form-submit" type="submit" value="Сохранить">
-
                 </form>
-
             </div>
         </div>
         <footer class="footer">
