--- a/index.html
+++ b/index.html
@@ -29,64 +29,62 @@
                 <div class="element">
                     <img src="images/karachaevsk.jpg" alt="Карачаевск" class="element__image">
                     <div class="element__text">
-                        <p class="element__name">Карачаевск</p>
+                        <h2 class="element__name">Карачаевск</h2>
                         <button class="element__like"></button>
                     </div>
                 </div>
                 <div class="element">
                     <img src="images/elbrus.jpg" alt="Гора Эльбрус" class="element__image">
                     <div class="element__text">
-                        <p class="element__name">Гора Эльбрус</p>
+                        <h2 class="element__name">Гора Эльбрус</h2>
                         <button class="element__like"></button>
                     </div>
                 </div>
                 <div class="element">
                     <img src="images/dombay.jpg" alt="Домбай" class="element__image">
                     <div class="element__text">
-                        <p class="element__name">Домбай</p>
+                        <h2 class="element__name">Домбай</h2>
                         <button class="element__like"></button>
                     </div>
                 </div>
                 <div class="element">
                     <img src="images/elbrus.jpg" alt="Гора Эльбрус" class="element__image">
                     <div class="element__text">
-                        <p class="element__name">Гора Эльбрус</p>
+                        <h2 class="element__name">Гора Эльбрус</h2>
                         <button class="element__like"></button>
                     </div>
                 </div>
                 <div class="element">
                     <img src="images/dombay.jpg" alt="Домбай" class="element__image">
                     <div class="element__text">
-                        <p class="element__name">Домбай</p>
+                        <h2 class="element__name">Домбай</h2>
                         <button class="element__like"></button>
                     </div>
                 </div>
                 <div class="element">
                     <img src="images/karachaevo-chekessiya.jpg" alt="Карачаево-Черкессия" class="element__image">
                     <div class="element__text">
-                        <p class="element__name">Карачаево-Черкессия</p>
+                        <h2 class="element__name">Карачаево-Черкессия</h2>
                         <button class="element__like"></button>
                     </div>
                 </div>
 
             </section>
-
         </main>
-
+        <footer class="footer">
+            <p class="footer__text">&COPY; 2021 Mesto Russia</p>
+        </footer>
         <div class="popup">
             <div class="popup__container">
                 <button class="popup__close-button"></button>
                 <form action="" class="popup__form">
                     <h2 class="popup__form-header">Редактировать профиль</h2>
-                    <input class="popup__form-input-name" type="text" name="name" value="Жак-Ив Кусто" required>
-                    <input class="popup__form-input-job" type="text" name="job" value="Исследователь океана" required>
-                    <input class="popup__form-submit" type="submit" value="Сохранить">
+                    <input class="popup__form-input-text popup__form-input-text_name" type="text" name="name" value="Жак-Ив Кусто" required>
+                    <input class="popup__form-input-text popup__form-input-text_job" type="text" name="job" value="Исследователь океана" required>
+                    <button class="popup__form-submit" type="submit" value="Сохранить">
                 </form>
             </div>
         </div>
-        <footer class="footer">
-            <p class="footer__text">&COPY; 2021 Mesto Russia</p>
-        </footer>
         <script src="scripts/script.js"></script>
     </div>
 
