--- a/index.html
+++ b/index.html
@@ -76,14 +76,14 @@
         </footer>
         <div class="popup">
             <div class="popup__container">
-                <button class="popup__close-button"></button>
-                <form action="" class="popup__form">
+                <button class="popup__close-button" type="button"></button>
+                <form class="popup__form">
                     <h2 class="popup__form-header">Редактировать профиль</h2>
                     <input class="popup__form-input-text popup__form-input-text_name" type="text" name="name"
                         value="Жак-Ив Кусто" required>
                     <input class="popup__form-input-text popup__form-input-text_job" type="text" name="job"
                         value="Исследователь океана" required>
-                    <button class="popup__form-submit" type="submit" value="Сохранить">
+                    <button class="popup__form-submit" type="submit" value="Сохранить"></button>
                 </form>
             </div>
         </div>
