--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <div class="page">
         <header class="header">
             <img src="images/svg/mesto-russia-logo-svg.svg" alt="Mesto Russia Logo" class="header__logo">
-
         </header>
         <main class="content">
             <section class="profile">
@@ -77,13 +76,13 @@
         <div class="popup">
             <div class="popup__container">
                 <button class="popup__close-button" type="button"></button>
-                <form class="popup__form">
+                <form class="popup__form" name="popup__form">
                     <h2 class="popup__form-header">Редактировать профиль</h2>
                     <input class="popup__form-input-text popup__form-input-text_name" type="text" name="name"
                         value="Жак-Ив Кусто" required>
                     <input class="popup__form-input-text popup__form-input-text_job" type="text" name="job"
                         value="Исследователь океана" required>
-                    <button class="popup__form-submit" type="submit" value="Сохранить"></button>
+                    <button class="popup__form-submit" type="submit" value="Сохранить">Сохранить</button>
                 </form>
             </div>
         </div>
