--- a/index.html
+++ b/index.html
@@ -19,52 +19,52 @@
                 <img src="images/kusto.jpg" alt="Kusto" class="profile__avatar">
                 <div class="profile__info">
                     <h1 class="profile__name">Жак-Ив Кусто</h1>
-                    <button class="profile__edit-button"></button>
+                    <button class="profile__edit-button" type="button"></button>
                     <p class="profile__job">Исследователь океана</p>
                 </div>
-                <button class="profile__add-button"></button>
+                <button class="profile__add-button" type="button"></button>
             </section>
             <section class="elements">
                 <div class="element">
                     <img src="images/karachaevsk.jpg" alt="Карачаевск" class="element__image">
                     <div class="element__text">
                         <h2 class="element__name">Карачаевск</h2>
-                        <button class="element__like"></button>
+                        <button class="element__like" type="button"></button>
                     </div>
                 </div>
                 <div class="element">
                     <img src="images/elbrus.jpg" alt="Гора Эльбрус" class="element__image">
                     <div class="element__text">
                         <h2 class="element__name">Гора Эльбрус</h2>
-                        <button class="element__like"></button>
+                        <button class="element__like" type="button"></button>
                     </div>
                 </div>
                 <div class="element">
                     <img src="images/dombay.jpg" alt="Домбай" class="element__image">
                     <div class="element__text">
                         <h2 class="element__name">Домбай</h2>
-                        <button class="element__like"></button>
+                        <button class="element__like" type="button"></button>
                     </div>
                 </div>
                 <div class="element">
                     <img src="images/elbrus.jpg" alt="Гора Эльбрус" class="element__image">
                     <div class="element__text">
                         <h2 class="element__name">Гора Эльбрус</h2>
-                        <button class="element__like"></button>
+                        <button class="element__like" type="button"></button>
                     </div>
                 </div>
                 <div class="element">
                     <img src="images/dombay.jpg" alt="Домбай" class="element__image">
                     <div class="element__text">
                         <h2 class="element__name">Домбай</h2>
-                        <button class="element__like"></button>
+                        <button class="element__like" type="button"></button>
                     </div>
                 </div>
                 <div class="element">
                     <img src="images/karachaevo-chekessiya.jpg" alt="Карачаево-Черкессия" class="element__image">
                     <div class="element__text">
                         <h2 class="element__name">Карачаево-Черкессия</h2>
-                        <button class="element__like"></button>
+                        <button class="element__like" type="button"></button>
                     </div>
                 </div>
 
