--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
                 <button class="popup__close-button" type="button"></button>
                 <form class="popup__form" name="popup__form">
                     <h2 class="popup__form-header">Редактировать профиль</h2>
-                    <input class="popup__form-input-text popup__form-input-text_name" type="text" name="name"
+                    <input class="popup__form-input popup__form-input_text_name " type="text" name="name"
                         value="Жак-Ив Кусто" required>
-                    <input class="popup__form-input-text popup__form-input-text_job" type="text" name="job"
+                    <input class="popup__form-input popup__form-input_text_job" type="text" name="job"
                         value="Исследователь океана" required>
                     <button class="popup__form-submit" type="submit" value="Сохранить">Сохранить</button>
                 </form>
