--- a/index.html
+++ b/index.html
@@ -19,52 +19,59 @@
                 <img src="images/kusto.jpg" alt="Kusto" class="profile__avatar">
                 <div class="profile__info">
                     <h1 class="profile__name">Жак-Ив Кусто</h1>
-                    <button class="profile__edit-button" type="button" aria-label="Изменение профиля"></button>
+                    <button class="profile__edit-button" type="button"></button>
                     <p class="profile__job">Исследователь океана</p>
                 </div>
-                <button class="profile__add-button" type="button" aria-label="Добавить фотографию"></button>
+                <button class="profile__add-button" type="button"></button>
             </section>
             <section class="elements">
                 <div class="element">
                     <img src="images/karachaevsk.jpg" alt="Карачаевск" class="element__image">
+                    <button class="element__remove" type="button"></button>
                     <div class="element__text">
                         <h2 class="element__name">Карачаевск</h2>
-                        <button class="element__like" type="button" aria-label="Нравится"></button>
+                        <button class="element__like" type="button"></button>
                     </div>
+
                 </div>
                 <div class="element">
                     <img src="images/elbrus.jpg" alt="Гора Эльбрус" class="element__image">
+                    <button class="element__remove" type="button"></button>
                     <div class="element__text">
                         <h2 class="element__name">Гора Эльбрус</h2>
-                        <button class="element__like" type="button" aria-label="Нравится"></button>
+                        <button class="element__like" type="button"></button>
                     </div>
                 </div>
                 <div class="element">
                     <img src="images/dombay.jpg" alt="Домбай" class="element__image">
+                    <button class="element__remove" type="button"></button>
                     <div class="element__text">
                         <h2 class="element__name">Домбай</h2>
-                        <button class="element__like" type="button" aria-label="Нравится"></button>
+                        <button class="element__like" type="button"></button>
                     </div>
                 </div>
                 <div class="element">
                     <img src="images/elbrus.jpg" alt="Гора Эльбрус" class="element__image">
+                    <button class="element__remove" type="button"></button>
                     <div class="element__text">
                         <h2 class="element__name">Гора Эльбрус</h2>
-                        <button class="element__like" type="button" aria-label="Нравится"></button>
+                        <button class="element__like" type="button"></button>
                     </div>
                 </div>
                 <div class="element">
                     <img src="images/dombay.jpg" alt="Домбай" class="element__image">
+                    <button class="element__remove" type="button"></button>
                     <div class="element__text">
                         <h2 class="element__name">Домбай</h2>
-                        <button class="element__like" type="button" aria-label="Нравится"></button>
+                        <button class="element__like" type="button"></button>
                     </div>
                 </div>
                 <div class="element">
                     <img src="images/karachaevo-chekessiya.jpg" alt="Карачаево-Черкессия" class="element__image">
+                    <button class="element__remove" type="button"></button>
                     <div class="element__text">
                         <h2 class="element__name">Карачаево-Черкессия</h2>
-                        <button class="element__like" type="button" aria-label="Нравится"></button>
+                        <button class="element__like" type="button"></button>
                     </div>
                 </div>
 
@@ -74,10 +81,10 @@
             <p class="footer__text">&COPY; 2021 Mesto Russia</p>
         </footer>
 
-        <div class="popup">
+        <div class="popup popup_form_edit">
             <div class="popup__container">
-                <button class="popup__close-button" type="button" aria-label="Закрыть форму"></button>
-                <form class="popup__form" name="popup__form">
+                <button class="popup__close popup__close_button_edit" type="button"></button>
+                <form class="popup__form popup_form_edit" name="popup__form">
                     <h2 class="popup__form-header">Редактировать профиль</h2>
                     <input class="popup__form-input popup__form-input_text_name " type="text" name="name"
                         value="Жак-Ив Кусто" required>
@@ -87,6 +94,46 @@
                 </form>
             </div>
         </div>
+
+        <div class="popup popup_form_add">
+            <div class="popup__container">
+                <button class="popup__close popup__close_button_add" type="button"></button>
+                <form class="popup__form" name="popup__form">
+                    <h2 class="popup__form-header">Новое место</h2>
+                    <input class="popup__form-input popup__form-input_text_card-name " type="text" name="name"
+                        placeholder="Название" required>
+                    <input class="popup__form-input popup__form-input_text_url" type="text" name="job"
+                        placeholder="Ссылка на картинку" required>
+                    <button class="popup__form-submit" type="submit" value="Сохранить">Сохранить</button>
+                </form>
+            </div>
+        </div>
+
+        <div class="popup popup_form_image">
+            <button class="popup__close popup__close_button_img" type="reset"></button>
+            <figure class="popup__figure">
+                <img class="popup__img" src="#" alt="">
+                <figcaption class="popup_figcaption"></figcaption>
+            </figure>
+        </div>
+
+        <!-- Тэмплейт для картинок
+                        <template class="elementTemplate">
+                    <div class="element">
+                        <img src="" alt="" class="element__image">
+                        <button class="element_remove" type="button"></button>
+                        <div class="element__text">
+                            <h2 class="element__name"></h2>
+                            <button class="element__like" type="button"></button>
+                        </div>
+                    </div>
+                </template>
+
+
+
+
+          -->
+
         <script src="scripts/script.js"></script>
 
     </div>
