feat: img-popup

--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
                         <h2 class="element__name">Карачаевск</h2>
                         <button class="element__like" type="button"></button>
                     </div>
-
                 </div>
                 <div class="element">
                     <img src="images/elbrus.jpg" alt="Гора Эльбрус" class="element__image">
@@ -109,11 +108,11 @@
             </div>
         </div>
 
-        <div class="popup popup_form_image">
+        <div class="popup popup_form_img">
             <button class="popup__close popup__close_button_img" type="reset"></button>
             <figure class="popup__figure">
-                <img class="popup__img" src="#" alt="">
-                <figcaption class="popup_figcaption"></figcaption>
+                <img class="popup__img" src="https://pictures.s3.yandex.net/frontend-developer/cards-compressed/arkhyz.jpg" alt="">
+                <figcaption class="popup_figcaption">Test</figcaption>
             </figure>
         </div>
 
