--- a/index.html
+++ b/index.html
@@ -109,9 +109,10 @@
         </div>
 
         <div class="popup popup_form_img">
-            <button class="popup__close popup__close_button_img" type="reset"></button>
             <figure class="popup__figure">
-                <img class="popup__img" src="https://pictures.s3.yandex.net/frontend-developer/cards-compressed/arkhyz.jpg" alt="">
+                <button class="popup__close popup__close_button_img" type="button"></button>
+                <img class="popup__img"
+                    src="https://pictures.s3.yandex.net/frontend-developer/cards-compressed/arkhyz.jpg" alt="">
                 <figcaption class="popup_figcaption">Test</figcaption>
             </figure>
         </div>
