feat: delete and likes functions js

--- a/index.html
+++ b/index.html
@@ -72,10 +72,11 @@
         <template id="element-template">
             <div class="element">
                 <img src="" alt="" class="element__image">
-                <button class="element_remove" type="button"></button>
-                <div class="element__text">
+                <button class="element__remove" type="button"></button>
+                <div class="element__container">
                     <h2 class="element__name"></h2>
                     <button class="element__like" type="button"></button>
+                    
                 </div>
             </div>
         </template>
