fix: popup__figcaption

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <figure class="popup__figure">
                 <button class="popup__close popup__close_button_img" type="button"></button>
                 <img class="popup__img" src="" alt="">
-                <figcaption class="popup_figcaption"></figcaption>
+                <figcaption class="popup__figcaption"></figcaption>
             </figure>
         </div>
 
