--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@
         <div class="popup popup_form_img">
             <figure class="popup__figure">
                 <button class="popup__close popup__close_button_img" type="button"></button>
-                <img class="popup__img" src="" alt="">
+                <img class="popup__img" src="#" alt="">
                 <figcaption class="popup__figcaption"></figcaption>
             </figure>
         </div>
 
         <template id="element-template">
             <div class="element">
-                <img src="" alt="" class="element__image">
+                <img src="#" alt="" class="element__image">
                 <div class="element__container">
                     <h2 class="element__name"></h2>
                     <button class="element__like" type="button"></button>
