--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="popup popup_form_edit">
             <div class="popup__container">
                 <button class="popup__close popup__close_button_edit" type="button"></button>
-                <form class="popup__form popup_form_edit" name="popup__form">
+                <form class="popup__form" name="popup__form">
                     <h2 class="popup__form-header">Редактировать профиль</h2>
                     <input class="popup__form-input popup__form-input_text_name " type="text" name="name"
                         value="Жак-Ив Кусто" required>
