fix: name attribute

--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
         <div class="popup popup_form_edit">
             <div class="popup__container">
                 <button class="popup__close popup__close_button_edit" type="button"></button>
-                <form class="popup__form" name="popup__form">
+                <form class="popup__form" name="popup-form-edit">
                     <h2 class="popup__form-header">Редактировать профиль</h2>
-                    <input class="popup__form-input popup__form-input_text_name " type="text" name="name"
+                    <input class="popup__form-input popup__form-input_text_name " type="text" name="man-name"
                         value="Жак-Ив Кусто" required>
-                    <input class="popup__form-input popup__form-input_text_job" type="text" name="job"
+                    <input class="popup__form-input popup__form-input_text_job" type="text" name="man-job"
                         value="Исследователь океана" required>
                     <button class="popup__form-submit" type="submit" value="Сохранить">Сохранить</button>
                 </form>
@@ -49,11 +49,11 @@
         <div class="popup popup_form_add">
             <div class="popup__container">
                 <button class="popup__close popup__close_button_add" type="button"></button>
-                <form class="popup__form" name="popup__form">
+                <form class="popup__form" name="popup-form-add">
                     <h2 class="popup__form-header">Новое место</h2>
                     <input class="popup__form-input popup__form-input_text_img-name " type="text" name="img-name"
                         placeholder="Название" required>
-                    <input class="popup__form-input popup__form-input_text_url" type="text" name="job"
+                    <input class="popup__form-input popup__form-input_text_url" type="url" name="img-place"
                         placeholder="Ссылка на картинку" required>
                     <button class="popup__form-submit" type="submit" value="Сохранить">Сохранить</button>
                 </form>
